--- a/BluetoothClassicExample/ios/Podfile
+++ b/BluetoothClassicExample/ios/Podfile
@@ -39,7 +39,8 @@ target 'BluetoothClassicExample' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
-  pod 'react-native-bluetooth-classic', :path => '../../'
+  # React Native BluetoothClassic is now located in a separate project from the Example app
+  pod 'react-native-bluetooth-classic', :path => '../../../react-native-bluetooth-classic'
 
   target 'BluetoothClassicExampleTests' do
     inherit! :search_paths
