--- a/BluetoothClassicExample/package.json
+++ b/BluetoothClassicExample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BluetoothClassicExample",
+  "name": "bluetooth-classic-example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
