--- a/BluetoothClassicExample/package.json
+++ b/BluetoothClassicExample/package.json
@@ -14,7 +14,8 @@
     "buffer": "^6.0.3",
     "native-base": "^2.13.14",
     "react": "16.8.6",
-    "react-native": "0.60.0"
+    "react-native": "0.60.0",
+    "react-native-bluetooth-classic": "^1.60.0-rc.24"
   },
   "devDependencies": {
     "@babel/core": "7.8.3",
